--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
     </div>
 <div class="actor-cards-conteiner">
     <div class="card-content">
-        <div class="card-banner-1">Robert Pattison - Batman</div>
-        <div class="card-banner-2">Zoe Kravitz - Mulher Gato</div>
-        <div class="card-banner-3">Jeffrey Wright - Gordon</div>
+        <div class="card banner-1">Robert Pattison - Batman</div>
+        <div class="card banner-2">Zoe Kravitz - Mulher Gato</div>
+        <div class="card banner-3">Jeffrey Wright - Gordon</div>
     </div>
 </div>
 
