--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <a href="Index.html"><img src="./Assets/images/batmanlogo.webp" id="logo" "></a>
             <nav>
                 <ul>
-                        <a href="Index.html">
+                        <a href="index.html">
                             <li>Home</li>
                         </a>
                     
