--- a/pages/comentario.html
+++ b/pages/comentario.html
@@ -10,7 +10,7 @@
 </head>
 <body> 
     <header>
-        <a href="../Index.html"><img src="../Assets/images/batmanlogo.webp" id="logo" "></a>
+        <a href="../index.html"><img src="../Assets/images/batmanlogo.webp" id="logo" "></a>
             <nav>
                 <ul>
                         <a href="../index.html">
