--- a/pages/contato.html
+++ b/pages/contato.html
@@ -11,7 +11,7 @@
 </head>
 <body style="background-image: ;"> 
     <header>
-        <a href="../Index.html"><img src="../Assets/images/batmanlogo.webp" id="logo" "></a>
+        <a href="../index.html"><img src="../Assets/images/batmanlogo.webp" id="logo" "></a>
             <nav>
                 <ul>
                         <a href="../index.html">
